--- a/apps/web/biome.json
+++ b/apps/web/biome.json
@@ -3,7 +3,7 @@
   "extends": ["../../biome.json"],
   "overrides": [
     {
-      "include": ["./src/app/**", "src/middleware.ts"],
+      "include": ["./src/app/**", "./src/middleware.ts"],
       "linter": {
         "rules": {
           "style": {
