--- a/apps/mobile/biome.json
+++ b/apps/mobile/biome.json
@@ -1,4 +1,16 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
-  "extends": ["../../biome.json"]
+  "extends": ["../../biome.json"],
+  "overrides": [
+    {
+      "include": ["./src/app/**"],
+      "linter": {
+        "rules": {
+          "style": {
+            "noDefaultExport": "off"
+          }
+        }
+      }
+    }
+  ]
 }
