--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -5,8 +5,7 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"],
-      "#core/*": ["../../packages/core/*"],
-      "#ui/*": ["../../packages/ui/*"]
+      "@public/*": ["./public/*"]
     },
     "strictNullChecks": true
   },
