--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -5,8 +5,7 @@
     "baseUrl": "./",
     "paths": {
       "@/*": ["./src/*"],
-      "#core/*": ["../../packages/core/*"],
-      "#ui/*": ["../../packages/ui/*"]
+      "@public/*": ["./public/*"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx", ".expo/types/**/*.ts", "expo-env.d.ts"]
