--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "web": "cd ./apps/web && bun",
     "mobile": "cd ./apps/mobile && bun",
     "api": "cd ./apps/api && bun",
+    "catalog": "cd ./apps/catalog && bun",
     "ui": "cd ./packages/ui && bun",
     "core": "cd ./packages/core && bun",
     "design-token": "cd ./packages/design-token && bun",
