--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -18,6 +18,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@mona-ca/design-tokens": "workspace:*",
+    "@mona-ca/tailwindcss": "workspace:*",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/native": "^6.0.2",
     "ajv": "^8.12.0",
     "expo": "~50.0.14",
@@ -29,6 +32,7 @@
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "jotai": "^2.8.0",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
