fix: 🐛 `react`, `react-dom`のversionの不統一によるexpoの読み込みエラーの修正

--- a/apps/catalog/package.json
+++ b/apps/catalog/package.json
@@ -11,8 +11,8 @@
     "lint:fix": "biome lint --apply ./src/**/*.{ts,tsx} --no-errors-on-unmatched"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native-web": "^0.19.10"
   },
   "devDependencies": {
