--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,17 +14,13 @@
   "dependencies": {
     "@mona-ca/ui": "workspace:*",
     "next": "^14.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@mona-ca/tsconfig": "workspace:*",
-    "@next/eslint-plugin-next": "^14.1.1",
-    "@types/eslint": "^8.56.5",
-    "@types/node": "^20.11.24",
-    "@types/react": "^18.2.61",
-    "@types/react-dom": "^18.2.19",
-    "eslint": "^8.57.0",
+    "@types/react": "~18.2.61",
+    "@types/react-dom": "~18.2.19",
     "typescript": "^5.3.3"
   }
 }
