--- a/package.json
+++ b/package.json
@@ -30,5 +30,13 @@
     "typescript": "^5.4.5"
   },
   "packageManager": "bun@1.1.4",
-  "workspaces": ["apps/*", "packages/*", "tools/*"]
+  "workspaces": ["apps/*", "packages/*", "tools/*"],
+  "dependencies": {
+    "@types/bun": "^1.1.1"
+  },
+  "trustedDependencies": [
+    "@biomejs/biome",
+    "core-js",
+    "core-js-pure"
+  ]
 }
