--- a/package.json
+++ b/package.json
@@ -7,22 +7,24 @@
   },
   "workspaces": ["apps/*", "packages/*", "tools/*"],
   "scripts": {
+    "ci": "act --container-architecture linux/amd64",
+    "build": "turbo build --cache-dir=.turbo",
+    "dev": "turbo dev --cache-dir=.turbo",
+    "fmt": "turbo fmt --cache-dir=.turbo",
+    "lint": "turbo lint --cache-dir=.turbo",
+
     "api": "cd ./apps/api && bun",
-    "build": "turbo build",
     "catalog": "cd ./apps/catalog && bun",
-    "ci": "act --container-architecture linux/amd64 -e .github/event.json",
-    "core": "cd ./packages/core && bun",
-    "design-tokens": "cd ./packages/design-tokens && bun",
-    "dev": "turbo dev",
-    "fmt": "turbo fmt",
-    "lint": "turbo lint",
+    "web": "cd ./apps/web && bun",
     "mobile": "cd ./apps/mobile && bun",
+
+    "core": "cd ./packages/core && bun",
+    "ui": "cd ./packages/ui && bun",
+    "design-tokens": "cd ./packages/design-tokens && bun",
     "postcss": "cd ./tools/postcss && bun",
     "test": "turbo test",
     "tsconfig": "cd ./tools/tsconfig && bun",
-    "tw": "cd ./tools/tailwindcss && bun",
-    "ui": "cd ./packages/ui && bun",
-    "web": "cd ./apps/web && bun"
+    "tw": "cd ./tools/tailwindcss && bun"
   },
   "dependencies": {
     "@types/bun": "^1.1.1"
