--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -7,6 +7,7 @@
     "dev": "expo start --dev-client",
     "dev:ios": "expo start --ios --dev-client",
     "ios": "expo run:ios",
+    "ios:device": "expo run:ios --device",
     "android": "expo run:android",
     "fmt": "biome format ./src/**/*.{ts,tsx} --no-errors-on-unmatched",
     "fmt:fix": "biome format --write ./src/**/*.{ts,tsx} --no-errors-on-unmatched",
@@ -20,26 +21,26 @@
     "@expo/vector-icons": "^14.0.0",
     "@mona-ca/design-tokens": "workspace:*",
     "@mona-ca/tailwindcss": "workspace:*",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.0.2",
     "ajv": "^8.12.0",
-    "expo": "~50.0.14",
-    "expo-dev-client": "^3.3.11",
-    "expo-font": "~11.10.3",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.8",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-system-ui": "~2.9.3",
-    "expo-web-browser": "~12.8.2",
+    "expo": "~51.0.1",
+    "expo-dev-client": "~4.0.11",
+    "expo-font": "~12.0.4",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.11",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.4",
+    "expo-web-browser": "~13.0.3",
     "jotai": "^2.8.0",
     "nativewind": "^4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-reanimated": "~3.8.1",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native": "0.74.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.6",
     "tailwindcss": "^3.4.3"
   },
@@ -48,7 +49,7 @@
     "@mona-ca/tsconfig": "workspace:*",
     "@types/react": "~18.2.45",
     "jest": "^29.2.1",
-    "jest-expo": "~50.0.4",
+    "jest-expo": "~51.0.1",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   }
