--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,18 +3,25 @@
   "version": "0.1.0",
   "module": "src/index.js",
   "scripts": {
-    "dev": "wrangler dev src/app/index.ts",
+    "dev": "wrangler dev",
     "fmt": "biome format ./src/**/*.{ts,tsx} --no-errors-on-unmatched",
     "fmt:fix": "biome format --write ./src/**/*.{ts,tsx} --no-errors-on-unmatched",
     "lint": "biome lint ./src/**/*.{ts,tsx} --error-on-warnings --no-errors-on-unmatched",
-    "lint:fix": "biome lint --apply ./src/**/*.{ts,tsx} --no-errors-on-unmatched"
+    "lint:fix": "biome lint --apply ./src/**/*.{ts,tsx} --no-errors-on-unmatched",
+    "generate": "drizzle-kit generate",
+    "migrate": "bun generate && wrangler d1 migrations apply mona-ca_db",
+    "db:studio": "cross-env LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit studio --config drizzle.studio.config.ts",
+    "db:studio:prod": "drizzle-kit studio"
   },
   "dependencies": {
+    "better-sqlite3": "^9.6.0",
+    "drizzle-orm": "^0.30.10",
     "elysia": "latest"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240502.0",
     "@mona-ca/tsconfig": "workspace:*",
+    "drizzle-kit": "^0.21.1",
     "wrangler": "^3.55.0"
   }
 }
