--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -9,18 +9,23 @@
     "lint": "biome lint ./src/**/*.{ts,tsx} --error-on-warnings --no-errors-on-unmatched",
     "lint:fix": "biome lint --apply ./src/**/*.{ts,tsx} --no-errors-on-unmatched",
     "db:gen": "drizzle-kit generate",
-    "db:mig": "bun generate && wrangler d1 migrations apply mona-ca_db",
+    "db:mig": "bun db:gen && wrangler d1 migrations apply mona-ca_db",
     "db:std": "cross-env LOCAL_DB_PATH=$(find .wrangler/state/v3/d1/miniflare-D1DatabaseObject -type f -name '*.sqlite' -print -quit) drizzle-kit studio --config drizzle.studio.config.ts",
     "db:std:prod": "drizzle-kit studio"
   },
   "dependencies": {
-    "better-sqlite3": "^9.6.0",
+    "@elysiajs/swagger": "^1.0.5",
+    "arctic": "^1.9.0",
     "drizzle-orm": "^0.30.10",
-    "elysia": "latest"
+    "elysia": "latest",
+    "lucia": "^3.2.0",
+    "oslo": "^1.2.0"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20240502.0",
     "@mona-ca/tsconfig": "workspace:*",
+    "@sinclair/typebox": "^0.32.31",
+    "better-sqlite3": "^11.0.0",
     "drizzle-kit": "^0.21.1",
     "wrangler": "^3.55.0"
   }
