--- a/packages/argon2id/tsconfig.json
+++ b/packages/argon2id/tsconfig.json
@@ -7,5 +7,5 @@
     }
   },
   "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "bin"]
 }
