chore: 🔧 (.vscode) `customLabel`のpathの修正

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -165,13 +165,13 @@
   },
   "editor.defaultFormatter": "biomejs.biome",
   "workbench.editor.customLabels.patterns": {
-    "apps/api/**": "${filename}.${extname} ← API",
-    "apps/web/**": "${filename}.${extname} ← WEB",
-    "apps/mobile/**": "${filename}.${extname} ← MOBILE",
-    "tools/**": "${filename}.${extname} ← TOOL",
-    "packages/core/**": "${filename}.${extname} ← CORE",
-    "packages/ui/**": "${filename}.${extname} ← UI",
-    "packages/**": "${filename}.${extname} ← PACKAGE"
+    "**/apps/api/**": "${filename}.${extname} ← API",
+    "**/apps/web/**": "${filename}.${extname} ← WEB",
+    "**/apps/mobile/**": "${filename}.${extname} ← MOBILE",
+    "**/tools/**": "${filename}.${extname} ← TOOL",
+    "**/packages/core/**": "${filename}.${extname} ← CORE",
+    "**/packages/ui/**": "${filename}.${extname} ← UI",
+    "**/packages/**": "${filename}.${extname} ← PACKAGE"
   },
   "workbench.editor.customLabels.enabled": true
 }
