--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,6 @@ out/
 build
 dist
 
-
 # Debug
 npm-debug.log*
 yarn-debug.log*
@@ -38,3 +37,6 @@ yarn-error.log*
 *.pem
 
 *storybook.log
+
+# Rust
+target/
