test: 🧪 (api) test時の環境変数の設定

--- a/apps/api/.gitignore
+++ b/apps/api/.gitignore
@@ -29,6 +29,9 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.dev.vars*
+!.dev.vars.example
+!.dev.vars.test
 
 # vercel
 .vercel
@@ -43,4 +46,3 @@ package-lock.json
 
 # wrangler
 .wrangler
-.dev.vars
