--- a/apps/catalog/package.json
+++ b/apps/catalog/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "dev": "storybook dev -p 6006 --no-open",
     "build": "storybook build -o ./.storybook/static",
-    "fmt": "biome format ./src/**/*.{ts,tsx} --no-errors-on-unmatched",
-    "fmt:fix": "biome format --write ./src/**/*.{ts,tsx} --no-errors-on-unmatched",
-    "lint": "biome lint ./src/**/*.{ts,tsx} --error-on-warnings --no-errors-on-unmatched",
-    "lint:fix": "biome lint --apply ./src/**/*.{ts,tsx} --no-errors-on-unmatched"
+    "fmt": "biome format --no-errors-on-unmatched",
+    "fmt:fix": "biome format --write --no-errors-on-unmatched",
+    "lint": "biome lint --error-on-warnings --no-errors-on-unmatched",
+    "lint:fix": "biome lint --apply --no-errors-on-unmatched"
   },
   "dependencies": {
     "react": "18.2.0",
