--- a/.github/workflows/app-test.yaml
+++ b/.github/workflows/app-test.yaml
@@ -103,11 +103,48 @@ jobs:
 
       - name: format
         run: bun run fmt
+
+  type-check:
+    needs: install
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: ${{ env.BUN_VERSION }}
+
+      - name: get bun cache directory
+        id: get-bun-cache-directory
+        run: echo "STORE_PATH=$(bun pm cache)" >> $GITHUB_OUTPUT
+  
+      - name: cache bun dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.get-bun-cache-directory.outputs.STORE_PATH }}
+          key: ${{ runner.os }}-bun-dependencies-${{ hashFiles('**/bun.lockb') }}
+          restore-keys: ${{ runner.os }}-bun-dependencies-
+
+      - name: cache turbo build
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-bun-build-${{ github.sha }}
+          restore-keys: ${{ runner.os }}-bun-build-
+      
+      - name: install
+        run: bun install --frozen-lockfile
+
+      - name: format
+        run: bun run type-check
     
-  build_and_test:
+  test:
     needs:
       - format
       - lint
+      - type-check
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -141,10 +178,51 @@ jobs:
       
       - name: test
         run: bun run test
+    
+  build:
+    needs:
+      - format
+      - lint
+      - type-check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: ${{ env.BUN_VERSION }}
+
+      - name: get bun cache directory
+        id: get-bun-cache-directory
+        run: echo "STORE_PATH=$(bun pm cache)" >> $GITHUB_OUTPUT
+  
+      - name: cache bun dependencies
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.get-bun-cache-directory.outputs.STORE_PATH }}
+          key: ${{ runner.os }}-bun-dependencies-${{ hashFiles('**/bun.lockb') }}
+          restore-keys: ${{ runner.os }}-bun-dependencies-
+      
+      - name: cache turbo build
+        uses: actions/cache@v4
+        with:
+          path: .turbo
+          key: ${{ runner.os }}-bun-build-${{ github.sha }}
+          restore-keys: ${{ runner.os }}-bun-build-
+
+      - name: install
+        run: bun install --frozen-lockfile
+      
+      - name: build
+        run: bun run build
 
   status:
     runs-on: ubuntu-latest
-    needs: build_and_test
+    needs: 
+      - test
+      - build
     if: ${{ ! failure() }}
     steps:
       - name: check
