feat: ⚰️ (api) test envファイルを追跡対象外に設定
feat: ⚰️ (api) test envファイルを追跡対象外に設定

feat: ⚰️ (api) test envファイルを追跡対象外に設定

--- a/apps/api/.dev.vars.example
+++ b/apps/api/.dev.vars.example
@@ -1,3 +1,7 @@
+# Application Environment
+#   - development
+#   - production
+#   - test
 APP_ENV=
 
 # OAuth2.0 Provider Client ID and Client Secret
