chore: 🔧 (.vscode) CD項目の追加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -91,6 +91,11 @@
           "value": "ci: 🦺"
         },
         {
+          "description": "CD changes.",
+          "label": "cd: 🚀",
+          "value": "cd: 🚀"
+        },
+        {
           "description": "Build system or dependency changes.",
           "label": "build: 📦️",
           "value": "build: 📦️"
