--- a/.github/workflows/app-test.yaml
+++ b/.github/workflows/app-test.yaml
@@ -1,10 +1,7 @@
-name: APP-TEST
+name: App-Test
 
 on: 
   - push
-
-env:
-  BUN_VERSION: 1.1.4
 
 jobs:
   install:
@@ -14,9 +11,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+        uses: moonrepo/setup-toolchain@v0
         with:
-          bun-version: ${{ env.BUN_VERSION }}
+          auto-install: true
 
       - name: get bun cache directory
         id: get-bun-cache-directory
@@ -40,9 +37,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+        uses: moonrepo/setup-toolchain@v0
         with:
-          bun-version: ${{ env.BUN_VERSION }}
+          auto-install: true
 
       - name: get bun cache directory
         id: get-bun-cache-directory
@@ -76,9 +73,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+        uses: moonrepo/setup-toolchain@v0
         with:
-          bun-version: ${{ env.BUN_VERSION }}
+          auto-install: true
 
       - name: get bun cache directory
         id: get-bun-cache-directory
@@ -112,9 +109,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+        uses: moonrepo/setup-toolchain@v0
         with:
-          bun-version: ${{ env.BUN_VERSION }}
+          auto-install: true
 
       - name: get bun cache directory
         id: get-bun-cache-directory
@@ -151,9 +148,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+        uses: moonrepo/setup-toolchain@v0
         with:
-          bun-version: ${{ env.BUN_VERSION }}
+          auto-install: true
 
       - name: get bun cache directory
         id: get-bun-cache-directory
@@ -173,6 +170,16 @@ jobs:
           key: ${{ runner.os }}-bun-build-${{ github.sha }}
           restore-keys: ${{ runner.os }}-bun-build-
 
+      - name: set api env file path
+        run: echo "API_ENV_FILE_PATH=$(pwd)/apps/api/.dev.vars.test" >> $GITHUB_ENV
+        
+      - name: setup api environment variables
+        run: |
+          echo "DISCORD_CLIENT_ID=DISCORD_CLIENT_ID" >> ${{env.API_ENV_FILE_PATH}}
+          echo "DISCORD_CLIENT_SECRET=DISCORD_CLIENT_SECRET" >> ${{env.API_ENV_FILE_PATH}}
+          echo "GOOGLE_CLIENT_ID=GOOGLE_CLIENT_ID" >> ${{env.API_ENV_FILE_PATH}}
+          echo "GOOGLE_CLIENT_SECRET=GOOGLE_CLIENT_SECRET" >> ${{env.API_ENV_FILE_PATH}}
+
       - name: install
         run: bun install --frozen-lockfile
       
@@ -190,9 +197,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Bun
-        uses: oven-sh/setup-bun@v1
+        uses: moonrepo/setup-toolchain@v0
         with:
-          bun-version: ${{ env.BUN_VERSION }}
+          auto-install: true
 
       - name: get bun cache directory
         id: get-bun-cache-directory
