--- a/packages/design-tokens/package.json
+++ b/packages/design-tokens/package.json
@@ -5,6 +5,7 @@
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "scripts": {
+    "gen:colors": "bun ./src/colors/export-radix-colors/script.ts",
     "fmt": "biome format --no-errors-on-unmatched",
     "fmt:fix": "biome format --write --no-errors-on-unmatched",
     "lint": "biome lint --error-on-warnings --no-errors-on-unmatched",
