refactor: ♻️ (design-token) ファイル構成の変更とsnapshotテストの作成

--- a/packages/design-tokens/package.json
+++ b/packages/design-tokens/package.json
@@ -9,7 +9,8 @@
     "fmt": "biome format --no-errors-on-unmatched",
     "fmt:fix": "biome format --write --no-errors-on-unmatched",
     "lint": "biome lint --error-on-warnings --no-errors-on-unmatched",
-    "lint:fix": "biome lint --apply --no-errors-on-unmatched"
+    "lint:fix": "biome lint --apply --no-errors-on-unmatched",
+    "test": "bun test"
   },
   "dependencies": {
     "@radix-ui/colors": "^3.0.0"
