--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,7 +10,8 @@
     "fmt": "biome format --no-errors-on-unmatched",
     "fmt:fix": "biome format --write --no-errors-on-unmatched",
     "lint": "biome lint --error-on-warnings --no-errors-on-unmatched",
-    "lint:fix": "biome lint --apply --no-errors-on-unmatched"
+    "lint:fix": "biome lint --apply --no-errors-on-unmatched",
+    "test": "bun test"
   },
   "devDependencies": {
     "@mona-ca/tsconfig": "workspace:*",
