--- a/packages/tailwind-helpers/tsconfig.json
+++ b/packages/tailwind-helpers/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "extends": "@mona-ca/tsconfig/base.json",
   "compilerOptions": {
-    "outDir": "dist"
+    "outDir": "dist",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "dist"]
