chore: 🔧 (tailwind-helpers) 拡張機能の補完が適応されるように設定ファイルを修正

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+  "[javascript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
   "[properties]": {
     "editor.defaultFormatter": "foxundermoon.shell-format"
   },
@@ -11,23 +14,9 @@
   "[typescript]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
-  "cSpell.words": [
-    "Elysia"
-  ],
-  "commit-message-editor.dynamicTemplate": [
-    "{type}{scope}{description}",
-    "",
-    "{body}",
-    "",
-    "{footer}"
-  ],
-  "commit-message-editor.staticTemplate": [
-    "label: emoji (scope) short-description",
-    "",
-    "body",
-    "",
-    "footer"
-  ],
+  "cSpell.words": ["Elysia"],
+  "commit-message-editor.dynamicTemplate": ["{type}{scope}{description}", "", "{body}", "", "{footer}"],
+  "commit-message-editor.staticTemplate": ["label: emoji (scope) short-description", "", "body", "", "footer"],
   "commit-message-editor.tokens": [
     {
       "combobox": true,
@@ -186,6 +175,12 @@
     "source.organizeImports.biome": "explicit"
   },
   "editor.defaultFormatter": "biomejs.biome",
+  "tailwindCSS.experimental.classRegex": [
+    ["tv\\(([^)]*)\\)", "[\"']([^\"']*)*?[\"']"],
+    ["twColorPalette\\(([^)]*)\\)", "[\"']([^\"']*).*?[\"']"],
+    ["twPseudo\\(([^)]*)\\)", "[\"']([^\"']*).*?[\"']"],
+    ["twMerge\\(([^)]*)\\)", "[\"']([^\"']*).*?[\"']"]
+  ],
   "workbench.editor.customLabels.enabled": true,
   "workbench.editor.customLabels.patterns": {
     "**/apps/api/**": "${filename}.${extname} ← API",
