--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -65,6 +65,16 @@
           "value": "style: 💄"
         },
         {
+          "description": "Code format changes.",
+          "label": "format: 🎨",
+          "value": "format: 🎨"
+        },
+        {
+          "description": "Rename files or directories.",
+          "label": "rename: 🚚",
+          "value": "rename: 🚚"
+        },
+        {
           "description": "Code formatting or refactoring.",
           "label": "refactor: ♻️",
           "value": "refactor: ♻️"
@@ -128,11 +138,6 @@
           "description": "The first commit.",
           "label": "initial: 🎉",
           "value": "initial: 🎉"
-        },
-        {
-          "description": "Code format changes.",
-          "label": "format: 🎨",
-          "value": "format: 🎨"
         }
       ],
       "type": "enum"
