--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,15 +12,19 @@
     "lint:fix": "biome lint --apply --no-errors-on-unmatched"
   },
   "dependencies": {
+    "@mona-ca/tailwind-helpers": "workspace:*",
     "@mona-ca/ui": "workspace:*",
-    "next": "^14.1.1",
+    "next": "^14.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.4.7"
   },
   "devDependencies": {
+    "@mona-ca/postcss": "workspace:*",
+    "@mona-ca/tailwind-config": "workspace:*",
     "@mona-ca/tsconfig": "workspace:*",
-    "@types/react": "~18.2.61",
-    "@types/react-dom": "~18.2.19",
-    "typescript": "^5.3.3"
+    "@types/react": "^18.2.79",
+    "@types/react-dom": "^18.2.25",
+    "typescript": "^5.5.4"
   }
 }
