--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@mona-ca/design-tokens": "workspace:*",
-    "@mona-ca/tailwindcss": "workspace:*",
+    "@mona-ca/tailwind-helpers": "workspace:*",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.17",
     "ajv": "^8.17.1",
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.24.8",
+    "@mona-ca/tailwind-config": "workspace:*",
     "@mona-ca/tsconfig": "workspace:*",
     "@types/react": "^18.2.79",
     "jest": "^29.7.0",
