chore: 🔧 update tsconfig path field

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -2,7 +2,9 @@
   "extends": "@mona-ca/tsconfig/react-library.json",
   "compilerOptions": {
     "outDir": "dist",
-    "@/*": ["./src/*"]
+    "paths": {
+      "@ui/*": ["./src/*"]
+    }
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "dist"]
