--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -4,8 +4,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "paths": {
-      "@/*": ["src/*"],
-      "@public/*": ["./public/*"]
+      "@web/*": ["src/*"],
+      "@web/public/*": ["./public/*"]
     },
     "strictNullChecks": true
   },
