--- a/apps/api/biome.json
+++ b/apps/api/biome.json
@@ -1,6 +1,9 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.8.0/schema.json",
   "extends": ["../../biome.json"],
+  "files": {
+    "ignore": ["drizzle/**"]
+  },
   "overrides": [
     {
       "include": ["./src/app/**"],
