--- a/biome.json
+++ b/biome.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.8.0/schema.json",
   "files": {
-    "include": ["src/**/*.ts", "src/**/*.tsx", "*.json"],
+    "include": ["**/*.ts*", "**/*.*js*", "**/*.json"],
     "ignore": ["node_modules", "dist", ".turbo", ".next", ".expo", "bin"]
   },
   "formatter": {
@@ -69,5 +69,10 @@
         }
       }
     }
-  ]
+  ],
+  "vcs": {
+    "enabled": true,
+    "clientKind": "git",
+    "useIgnoreFile": true
+  }
 }
