--- a/packages/argon2id/biome.json
+++ b/packages/argon2id/biome.json
@@ -2,6 +2,6 @@
   "$schema": "https://biomejs.dev/schemas/1.8.0/schema.json",
   "extends": ["../../biome.json"],
   "files": {
-    "ignore": ["bin/**"]
+    "ignore": ["bin/**", "pkg/**"]
   }
 }
