feat: ✨ (tailwind-helpers) create `pseudo-class` type

--- a/packages/tailwind-helpers/tsconfig.json
+++ b/packages/tailwind-helpers/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "dist",
     "paths": {
-      "@/*": ["./src/*"]
+      "@tailwind-helpers/*": ["./src/*"]
     }
   },
   "include": ["**/*.ts", "**/*.tsx"],
