--- a/packages/tailwind-helpers/package.json
+++ b/packages/tailwind-helpers/package.json
@@ -14,7 +14,8 @@
     "fmt:fix": "biome format --write --no-errors-on-unmatched",
     "lint": "biome lint --error-on-warnings --no-errors-on-unmatched",
     "lint:fix": "biome lint --write --no-errors-on-unmatched",
-    "test": "bun test"
+    "test": "bun test",
+    "gen:pseudo-class": "bun run ./src/scripts/generate-pseudo-class.ts"
   },
   "dependencies": {
     "@mona-ca/tailwind-config": "workspace:*",
