feat: 🎈 (tailwind-helpers) 型情報の修正

--- a/packages/tailwind-helpers/tsconfig.json
+++ b/packages/tailwind-helpers/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "extends": "@mona-ca/tsconfig/base.json",
   "compilerOptions": {
-    "outDir": "dist",
-    "paths": {
-      "@tailwind-helpers/*": ["./src/*"]
-    }
+    "outDir": "dist"
   },
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "dist"]
