feat: ✨ (catalog) setting storybook

--- a/apps/catalog/package.json
+++ b/apps/catalog/package.json
@@ -17,21 +17,34 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.6.1",
+    "@mona-ca/tailwind-config": "workspace:*",
     "@mona-ca/tsconfig": "workspace:*",
-    "@storybook/addon-a11y": "^8.2.6",
-    "@storybook/addon-essentials": "^8.2.6",
-    "@storybook/addon-interactions": "^8.2.6",
-    "@storybook/addon-links": "^8.2.6",
-    "@storybook/addon-onboarding": "^8.2.6",
-    "@storybook/addon-storysource": "^8.2.6",
+    "@mona-ca/postcss": "workspace:*",
+    "@react-native/babel-preset": "^0.74.86",
+    "@storybook/addon-a11y": "^8.2.7",
+    "@storybook/addon-essentials": "^8.2.7",
+    "@storybook/addon-interactions": "^8.2.7",
+    "@storybook/addon-links": "^8.2.7",
+    "@storybook/addon-onboarding": "^8.2.7",
+    "@storybook/addon-react-native-web": "^0.0.24",
+    "@storybook/addon-storysource": "^8.2.7",
+    "@storybook/addon-styling-webpack": "^1.0.0",
+    "@storybook/addon-themes": "^8.2.7",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
-    "@storybook/blocks": "^8.2.6",
-    "@storybook/react": "^8.2.6",
-    "@storybook/react-webpack5": "^8.2.6",
-    "@storybook/test": "^8.2.6",
+    "@storybook/blocks": "^8.2.7",
+    "@storybook/react": "^8.2.7",
+    "@storybook/react-webpack5": "^8.2.7",
+    "@storybook/test": "^8.2.7",
     "@storybook/test-runner": "^0.17.0",
+    "babel-loader": "^9.1.3",
+    "babel-plugin-react-native-web": "^0.19.12",
+    "css-loader": "^7.1.2",
+    "postcss": "^8.4.41",
+    "postcss-loader": "^8.1.1",
     "prop-types": "^15.8.1",
-    "storybook": "^8.2.6",
-    "storybook-dark-mode": "^4.0.2"
+    "storybook": "^8.2.7",
+    "storybook-dark-mode": "^4.0.2",
+    "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.7"
   }
 }
