--- a/apps/mobile/biome.json
+++ b/apps/mobile/biome.json
@@ -1,16 +1,4 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.8.0/schema.json",
-  "extends": ["../../biome.json"],
-  "overrides": [
-    {
-      "include": ["./src/app/**"],
-      "linter": {
-        "rules": {
-          "style": {
-            "noDefaultExport": "off"
-          }
-        }
-      }
-    }
-  ]
+  "extends": ["../../biome.json"]
 }
