feat: ✨ (catalog) add native preview

--- a/apps/catalog/tsconfig.json
+++ b/apps/catalog/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "outDir": "dist"
   },
-  "include": ["**/*.ts", "**/*.tsx", "./.storybook/**/*"],
+  "include": ["**/*.ts", "**/*.tsx", "./.storybook/**/*", ".expo/types/**/*.ts", "expo-env.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
