--- a/apps/catalog/biome.json
+++ b/apps/catalog/biome.json
@@ -1,4 +1,7 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.8.0/schema.json",
-  "extends": ["../../biome.json"]
+  "extends": ["../../biome.json"],
+  "linter": {
+    "ignore": ["./.storybook/mobile/storybook.requires.ts"]
+  }
 }
