--- a/apps/catalog/biome.json
+++ b/apps/catalog/biome.json
@@ -1,7 +1,4 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.8.0/schema.json",
-  "extends": ["../../biome.json"],
-  "linter": {
-    "ignore": ["./.storybook/mobile/storybook.requires.ts"]
-  }
+  "extends": ["../../biome.json"]
 }
