--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -24,23 +24,25 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.17",
     "ajv": "^8.17.1",
-    "expo": "^51.0.20",
-    "expo-dev-client": "^4.0.20",
+    "expo": "^51.0.27",
+    "expo-dev-client": "~4.0.22",
     "expo-font": "^12.0.8",
     "expo-linking": "^6.3.1",
-    "expo-router": "^3.5.18",
+    "expo-router": "~3.5.21",
     "expo-splash-screen": "^0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "^3.0.7",
     "expo-web-browser": "^13.0.3",
     "jotai": "^2.9.0",
+    "moti": "^0.29.0",
     "nativewind": "^4.0.36",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.2",
-    "react-native-reanimated": "^3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native": "0.74.5",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-web": "^0.19.12",
     "tailwindcss": "^3.4.4"
   },
@@ -51,7 +53,8 @@
     "@types/react": "^18.2.79",
     "jest": "^29.7.0",
     "jest-expo": "^51.0.3",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "~5.3.3"
   }
 }
