--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,13 +2,30 @@
   "name": "@mona-ca/ui",
   "version": "0.0.0",
   "private": true,
+  "exports": {
+    "assets": "./assets",
+    "icons": "./src/icons/index.ts",
+    "icons/native": "./src/icons/index.native.ts",
+    "components": "./src/components/index.ts",
+    "components/native": "./src/components/index.native.ts"
+  },
   "scripts": {
     "fmt": "biome format --no-errors-on-unmatched",
     "fmt:fix": "biome format --write --no-errors-on-unmatched",
     "lint": "biome lint --error-on-warnings --no-errors-on-unmatched",
-    "lint:fix": "biome lint --apply --no-errors-on-unmatched"
+    "lint:fix": "biome lint --write --no-errors-on-unmatched"
+  },
+  "dependencies": {
+    "@mona-ca/tailwind-helpers": "workspace:*",
+    "lucide-react": "^0.429.0",
+    "lucide-react-native": "^0.429.0",
+    "nativewind": "^4.0.36",
+    "react-native": "0.74.5",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
+    "@mona-ca/tailwind-config": "workspace:*",
     "@mona-ca/tsconfig": "workspace:*",
     "@turbo/gen": "^1.12.4",
     "@types/react": "~18.2.61",
