--- a/lefthook.yml
+++ b/lefthook.yml
@@ -2,4 +2,4 @@ pre-commit:
   commands:
     check:
       glob: "*.{js,ts,jsx,tsx}"
-      run: bun biome check --apply --no-errors-on-unmatched --files-ignore-unknown=true {staged_files} && git update-index --again
+      run: bun biome check --write --no-errors-on-unmatched --files-ignore-unknown=true --config-path ./biome.json {staged_files} && git update-index --again
